syntax = "proto3";

package auth;

service AuthService {
  rpc VerifyToken(TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool isValid = 1;
  int64 userId = 2;
}
